--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
     <h3> Skill Set</h3>
      <i>
     <ul>
-     <li>Adaptable </li>     
+     <li>Ambitious </li>     
      <li>Great Teamworker </li>
      <li>Outstanding Communication Skills </li>
-     <li>Curious </li>
+     <li>Adaptable </li>
      <li>Problem Solver </li>
      <li> Bi-lingual</li>
+      <li> Overall fantastic human being </li>
     </ul>
      </i>
    </div>
@@ -41,6 +42,7 @@
      <li> Greet Employees and Visitors At Desk </li
       
      </p>
+       <b> August 2013 - September 2016 </b>
      <ul><p><i> Fairview Ridges Hospital Transport </i></p>
        <li> Transport Pool Dept </li>
        <li> Updated daily white board in patient rooms with staff/ activity information </li>
