--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title>Resume</title>
   <link rel="stylesheet" href="style.css">
   </head>
-  <body background="bground2.jpg">  
+  <body background="background.jpg">  
     <img src="Resumepic.JPG" height=400 width=400 >
     
    <h1>Abdi-Nasir Hussien </h1>
