--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="style.css">
   </head>
   <body background="background.jpg">  
-    <img src="Resumepic.JPG" height=400 width=400 >
+    <img src="Resumepic.jpg" height=400 width=400 >
     
    <h1>Abdi-Nasir Hussien </h1>
     
