--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <title>Resume</title>
   <link rel="stylesheet" href="style.css">
   </head>
+  <audio src = "spring.mp3">
   <body background="background.jpg">  
     <img src="Resumepic.jpg" height=400 width=400 >
     
