--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   </head>
   <body background="background.jpg">  
     <img src="Resumepic.jpg" height=400 width=400 >
+      <audio src = "Spring.mp3">
+
     
    <h1>Abdi-Nasir Hussien </h1>
     
