--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
   <title>Resume</title>
@@ -9,7 +10,7 @@
     
    <h1>Abdi-Nasir Hussien </h1>
     <audio controls>
-      <source src="springg.mp3" type="audio/ogg">
+      <source src="springg.mp3" type="audio/mp3">
       Your browser does not support the audio element.
     </audio>
     <p id="address"> 13743 Aspen Grove LN
