--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Resume</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body background="background.jpg">  
     <img src="Resumepic.jpg" height=400 width=400 >
