--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Resume</title>
+  <title>Nasir Resume</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -27,7 +27,7 @@
      <li>Problem Solver </li>
      <li> Bi-lingual</li>
       <li> Overall fantastic human being </li>
-      <li>Music Production
+      <li>Music Producer for over 5 years
         <li style="list-style:none;">
         <audio controls>
         <source src="springg.mp3" type="audio/mp3">
