--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
       <li>Music Producer for over 5 years
         <li style="list-style:none;">
         <audio controls>
-        <source src="spring.mp3" type="audio/mp3">
-        Your browser does not support the audio element.
+        <source src="Spring.mp3" type="audio/mp3">
         </audio>
       </li>
       </li>
