--- a/index.html
+++ b/index.html
@@ -21,16 +21,17 @@
      <i>
     <ul>
      <li>Ambitious </li>
+      <li> Visionary <li>
      <li>Great Teamworker </li>
-     <li>Outstanding Communication Skills </li>
+     <li>Fast learner </li>
      <li>Adaptable </li>
      <li>Problem Solver </li>
      <li> Bi-lingual</li>
       <li> Overall fantastic human being </li>
-      <li>Music Producer for over 5 years
+      <li>Selt taught Music Producer for over 5 years
         <li style="list-style:none;">
         <audio controls>
-        <source src="Spring.mp3" type="audio/mp3">
+        <source src="Sleepyboy.mp3" type="audio/mp3">
         </audio>
       </li>
       </li>
@@ -42,7 +43,7 @@
      <h3><b> Work History </b></h3>
 
      <p><b><i> Security Officer 'Securitas' </i></b></p>
-      <p>April 2015 - Present</p>
+      <p>September 2016 - Present</p>
      <ul>
        <li> Secured premises and personnel by patrolling property </li>
        <li> Monitoring Surveillance Equipment </li>
