--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
      <i>
     <ul>
      <li>Ambitious </li>
-      <li> Visionary <li>
+      <li> Visionary </li>
      <li>Great Teamworker </li>
      <li>Fast learner </li>
      <li>Adaptable </li>
