--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
      <li>Ambitious </li>
       <li> Visionary </li>
      <li>Great Teamworker </li>
-     <li>Fast learner </li>
+     <li>Love of learning</li>
      <li>Adaptable </li>
      <li>Problem Solver </li>
      <li> Bi-lingual</li>
